--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -339,12 +339,18 @@
     "\n",
     "<ul>\n",
     "<li>\n",
-    "<i>makeUniqueId</i>: Generates and returns a \\emph{uuid}. This can be implemented to adhere to the hosting infrastructure best-practices.</li>\n",
+    "<b><i>makeUniqueId:</i></b> \n",
+    "Generates and returns a <i>uuid</i>. This can be implemented to adhere to the hosting infrastructure best-practices.</li>\n",
     "<li>\n",
-    "<i>extractExternalInputDataId</i>\n",
+    "<i><b>extractExternalInputDataId:</b></i>\n",
     "This method is used by the provenance type to extract the id of the incoming data. Its use is handy especially when a workflow component ingests files that have been produced by other workflows and that are represented by self-contained and structured data formats.  For instance, in NetCDF where data and metadata can be packaged together according to community standards, this method extracts and returns the id of the external resource, allowing the framework to use it in the current run to represent new dependencies. A customised implementation of this method for a provenance type that deals with domain-specific data formats, ensures the linkage and therefore the consistent continuation of provenance traces across workflow executions. </li>\n",
-    "<li><i>extractItemMetadata</i>\n",
+    "<li><b><i>extractItemMetadata:</i></b>\n",
     "This methods enables the configuration of the provenance for a particular domain, user or infrastructure requirement. It extracts metadata from the data written on a output channel and includes it as a detailed description of the <i>Data</i> entity within the provenance model.</li>\n",
+    "<li><b><i>applyFlowResetPolicy (Advanced):</i></b>\n",
+    "This method is invoked by each iteration when a decision has to be made on the required lineage pattern. The framework automatically passes information whether the invocation has produced any output or not (<i>on-void-iterations</i>). The method, according to predefined rules, provides indications on either discarding the current input data or to include it into the <i>StateCollection</i> automatically, capturing its contribution to the next invocation through a <i>stateful</i>operations. \n",
+    "In our implementation, basic provenance types such as <i>StatefulType</i> and <i>StatelessType</i> are made available and can be used accordingly the specific needs.\n",
+    "</li>\n",
+    "\n",
     "</ul>\n"
    ]
   },
@@ -446,11 +452,6 @@
     "\n",
     "<li><b><i>profile_prov_run</i></b> With this method, the users of the workflow can profile their run for provenance by indicating which types to apply to each component. Users can also chose where to store the metadata, locally to the file system or to a remote service. These operations can be performed in bulks, with different impacts on the overall overhead and on the experienced rapidity of the access of the lineage information. Additional details on the proposed remote provenance storage and access service will be provided in Chapter V. Finally, also general information about the attribution of the run, such as <i>username, run_id, description, workflow_name, workflow_id</i> are captured and included within the provenance traces.\n",
     "</li>\n",
-    "<li><b><i>applyFlowResetPolicy (Advanced)</i></b>\n",
-    "This method is invoked by each iteration when a decision has to be made on the required lineage pattern. The framework automatically passes information whether the invocation has produced any output or not (<i>on-void-iterations</i>). The method, according to predefined rules, provides indications on either discarding the current input data or to include it into the <i>StateCollection</i> automatically, capturing its contribution to the next invocation through a <i>stateful</i>operations. \n",
-    "In our implementation, basic provenance types such as <i>StatefulType</i> and <i>StatelessType</i> are made available and can be used accordingly the specific needs.\n",
-    "</li>\n",
-    "\n",
     "<li><b><i>Skip-Rules (Advanced)</i></b>\n",
     "Users can tune the scale of the records produced by indicating in the above method a set of <i>skip-rules</i> for every component.This functionality allows users to specify rules to control the data-driven production of the provenance declaratively. The approach takes advantage of the contextualisation applied by the provenance types, which extract domain and experimental metadata, and evaluates their value against simple <i>skip-rule</i> of this kind:\n",
     "</li>\n",
