--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -12,7 +12,7 @@
     "####  Royal Netherlands Meteorological Institure (KNMI)\n",
     "\n",
     "\n",
-    "The following \"Live\" notebook demonstrates a simple workflow implemented with a data-intensive processing library (dispel4py), that has been extended with a configurable and programmable provenance tracking framework.\n",
+    "The following \"Live\" notebook demonstrates a simple workflow implemented with a data-intensive processing library (dispel4py), that has been extended with a configurable and programmable provenance tracking framework , S-PROV.\n",
     "\n",
     "## Management Highligts, S-PROV Towards reproduciblity as a service\n",
     "<ul>\n",
@@ -132,9 +132,6 @@
     "        self._add_output('xarray')\n",
     "\n",
     "    def _process(self,inputs):\n",
-    "        self.log('Read_Process')\n",
-    "     \n",
-    "        self.log(inputs)\n",
     "        \n",
     "        inputLocation = inputs['input'][0]\n",
     "\n",
@@ -142,14 +139,14 @@
     "    \n",
     "        self.write( 'xarray' , (ds , inputs['input'][1]) , location=inputLocation )\n",
     "\n",
-    "            \n",
+    "        \n",
+    "#The IterativePE automatically assigns input and output ports to the component\n",
     "class Write(IterativePE):\n",
     "    \n",
     "    def __init__(self):\n",
     "        IterativePE.__init__(self)\n",
-    "        #self._add_input('input')\n",
-    "        #self._add_output('location')\n",
-    "        \n",
+    "         \n",
+    "            \n",
     "    def _process(self,inputs):\n",
     "        self.log('Write_Function')\n",
     "        \n",
@@ -170,13 +167,11 @@
     "    def _process(self,inputs):\n",
     "        self.log('Workflow_process')\n",
     "        \n",
-    "        #self.log(inputs)\n",
-    "        \n",
-    "        #nc = inputs['input'][0]\n",
+    "       \n",
     "        nc = inputs['input'][0]\n",
-    "        #self.log(nc)\n",
-    "        #\n",
-    "        self.write('output', (nc , inputs['input'][1] ))\n",
+    "       \n",
+    "        #Additional metadata can be added to the output for provenance contextualisation\n",
+    "        self.write('output', (nc , inputs['input'][1] ), metadata={'mycustom_term':10})\n",
     "\n",
     "\n",
     "\n",
@@ -246,16 +241,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "input_data = { \n",
     "                \n",
-    "                'Collector': [ { 'input' : [ 'http://opendap.knmi.nl/knmi/thredds/dodsC/CLIPC/cmcc/SWE/SWE_ophidia-0-10-1_CMCC_GlobSnow-SWE-L3B_monClim_19791001-20080701_1979-2008.nc',\n",
-    "                                'data/newA.nc']}]\n",
+    "                #'Collector': [ { 'input' : [ 'http://opendap.knmi.nl/knmi/thredds/dodsC/CLIPC/cmcc/SWE/SWE_ophidia-0-10-1_CMCC_GlobSnow-SWE-L3B_monClim_19791001-20080701_1979-2008.nc',\n",
+    "                #               'data/newA.nc']}]\n",
     "    \n",
-    "                #'Collector': [ { 'input': [ 'data/newA.nc', 'data/newB.nc']} ]     \n",
+    "                'Collector': [ { 'input': [ 'data/newA.nc', 'data/newB.nc']} ]     \n",
     "                #'Collector': [ { 'input': [ 'data/newB.nc', 'data/newC.nc']}]\n",
     "            }\n",
     "\n"
@@ -433,7 +428,7 @@
    },
    "outputs": [],
    "source": [
-    "skip_rules={\"ANALYSIS\":{\"term\":{\"$gt\":0,\"$lt\":100}}}"
+    "skip_rules={\"ANALYSIS\":{\"mycustom_term\":{\"$gt\":0,\"$lt\":10}}}"
    ]
   },
   {
@@ -684,7 +679,7 @@
     "Image(\"PROV.png\")\n",
     "\n",
     "    \n",
-    "# visualse NetCDF provenance in SVG"
+    "# visualse NetCDF provenance in PNG"
    ]
   },
   {
@@ -719,6 +714,15 @@
     "\n",
     "Change the <i>1.3 Specify the Input</i> section with the commented lines alternatively. Run the notebook to see updated results, both inline and on the remote repository."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
