text and boxes updates
# Conflicts:
#	ProvenanceDemo.ipynb

--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -247,10 +247,10 @@
    "source": [
     "input_data = { \n",
     "                \n",
-    "                #'Collector': [ { 'input' : [ 'http://opendap.knmi.nl/knmi/thredds/dodsC/CLIPC/cmcc/SWE/SWE_ophidia-0-10-1_CMCC_GlobSnow-SWE-L3B_monClim_19791001-20080701_1979-2008.nc',\n",
-    "                #               'data/newA.nc']}]\n",
+    "                'Collector': [ { 'input' : [ 'http://opendap.knmi.nl/knmi/thredds/dodsC/CLIPC/cmcc/SWE/SWE_ophidia-0-10-1_CMCC_GlobSnow-SWE-L3B_monClim_19791001-20080701_1979-2008.nc',\n",
+    "                               'data/newA.nc']}]\n",
     "    \n",
-    "                'Collector': [ { 'input': [ 'data/newA.nc', 'data/newB.nc']} ]     \n",
+    "                #'Collector': [ { 'input': [ 'data/newA.nc', 'data/newB.nc']} ]     \n",
     "                #'Collector': [ { 'input': [ 'data/newB.nc', 'data/newC.nc']}]\n",
     "            }\n",
     "\n"
@@ -410,7 +410,7 @@
     "\n",
     "<ul>\n",
     "\n",
-    "<li><b><i>profile_prov_run</i></b> With this method, the users of the workflow can profile their run for provenance by indicating which types to apply to each component. Users can also chose where to store the metadata, locally to the file system or to a remote service. These operations can be performed in bulks, with different impacts on the overall overhead and on the experienced rapidity of the access of the lineage information. Additional details on the proposed remote provenance storage and access service will be provided in Chapter V. Finally, also general information about the attribution of the run, such as <i>username, run_id, description, workflow_name, workflow_id</i> are captured and included within the provenance traces.\n",
+    "<li><b><i>profile_prov_run</i></b> With this method, the users of the workflow can profile their run for provenance by indicating which types to apply to each component. Users can also chose where to store the metadata, locally to the file system or to a remote service. These operations can be performed in bulks, with different impacts on the overall overhead and on the experienced rapidity of the access of the lineage information. Finally, also general information about the attribution of the run, such as <i>username, run_id, description, workflow_name, workflow_id</i> are captured and included within the provenance traces.\n",
     "</li>\n",
     "<li><b><i>Skip-Rules (Advanced)</i></b>\n",
     "Users can tune the scale of the records produced by indicating in the above method a set of <i>skip-rules</i> for every component.This functionality allows users to specify rules to control the data-driven production of the provenance declaratively. The approach takes advantage of the contextualisation applied by the provenance types, which extract domain and experimental metadata, and evaluates their value against simple <i>skip-rule</i> of this kind:\n",
@@ -715,6 +715,22 @@
     "### 3 - Data-reuse traceability.\n",
     "\n",
     "Change the <i>1.3 Specify the Input</i> section with the commented lines alternatively. Run the notebook to see updated results, both inline and on the remote repository."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#import matplotlib.pyplot as plt\n",
+    "#import cartopy.crs as ccrs\n",
+    "\n",
+    "#datamap = ds.SWE.isel(time=0)\n",
+    "#datamap.plot()\n",
+    "#plt.show()"
    ]
   },
   {
