--- a/AdvancedDemo.ipynb
+++ b/AdvancedDemo.ipynb
@@ -366,7 +366,7 @@
     "\n",
     "<ul>\n",
     "\n",
-    "<li><b><i>profile_prov_run</i></b> With this method, the users of the workflow can profile their run for provenance by indicating which types to apply to each component. Users can also chose where to store the metadata, locally to the file system or to a remote service. These operations can be performed in bulks, with different impacts on the overall overhead and on the experienced rapidity of the access of the lineage information. Additional details on the proposed remote provenance storage and access service will be provided in Chapter V. Finally, also general information about the attribution of the run, such as <i>username, run_id, description, workflow_name, workflow_id</i> are captured and included within the provenance traces.\n",
+    "<li><b><i>profile_prov_run</i></b> With this method, the users of the workflow can profile their run for provenance by indicating which types to apply to each component. Users can also chose where to store the metadata, locally to the file system or to a remote service. These operations can be performed in bulks, with different impacts on the overall overhead and on the experienced rapidity of the access of the lineage information. Finally, also general information about the attribution of the run, such as <i>username, run_id, description, workflow_name, workflow_id</i> are captured and included within the provenance traces.\n",
     "</li>\n",
     "<li><b><i>applyFlowResetPolicy (Advanced)</i></b>\n",
     "This method is invoked by each iteration when a decision has to be made on the required lineage pattern. The framework automatically passes information whether the invocation has produced any output or not (<i>on-void-iterations</i>). The method, according to predefined rules, provides indications on either discarding the current input data or to include it into the <i>StateCollection</i> automatically, capturing its contribution to the next invocation through a <i>stateful</i>operations. \n",
@@ -728,17 +728,7 @@
     "response = connection.getresponse()\n",
     "print(\"progress: \" + str((response.status, response.reason)))\n",
     "prov1 = response.read()\n",
-    "print('PROV TO EMBED:')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "print('PROV TO EMBED:')\n",
     "print str(prov1)"
    ]
   },
@@ -817,13 +807,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An example of the above W3C prov xml can be viewed using:\n",
     "\n",
-    "http://localhost:8180/provenance-explorer/html/view.jsp\n",
+    "#### Storage into generic archives\n",
+    "\n",
+    "The PROV Document can be store within generic archives:\n",
     "\n",
     "https://provenance.ecs.soton.ac.uk/store/\n",
     "\n",
-    "https://provenance.ecs.soton.ac.uk/store/documents/115540.svg\n",
+    "\n",
+    "An example of the above W3C prov xml can be viewed using:\n",
+    "\n",
+    "http://climate4impact.eu/provenance-explorer/html/view.jsp\n",
+    "\n",
+    "https://provenance.ecs.soton.ac.uk/store/\n",
     "\n",
     "\n"
    ]
@@ -874,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
