--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -510,10 +510,11 @@
    "outputs": [],
    "source": [
     "#Store via service\n",
-    "ProvenancePE.REPOS_URL='http://127.0.0.1:8082/workflow/insert'\n",
+    "ProvenancePE.REPOS_URL='http://climate4impact.eu/prov/workflow/insert'\n",
+    "\n",
     "\n",
     "#Export data lineage via service (REST GET Call on dataid resource)\n",
-    "ProvenancePE.PROV_EXPORT_URL='http://127.0.0.1:8082/workflow/export/data/'\n",
+    "ProvenancePE.PROV_EXPORT_URL='http://climate4impact.eu/prov/workflow/export/data/'\n",
     "\n",
     "\n",
     "#Store to local path\n",
