--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -67,7 +67,7 @@
     "<li>The dispel4py framework is utilised for the workflows</li>\n",
     "<li>Xarray for inmemory management of netcdf/opendap data.</li>\n",
     "<li>Matplotlib for visualisation.</li>\n",
-    "<li>W3C for provenance representation.</li>\n",
+    "<li>A W3C PROV specialisation (S-PROV) used as provenance data model.</li>\n",
     "</ul>"
    ]
   },
