--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -7,7 +7,7 @@
     "#  Provenance integration in netcdf/xarray Data-Intensive workflows.\n",
     "\n",
     "\n",
-    "#### Authors: Alessandro Spinuso and Andrej Mihajlovski, \n",
+    "#### Authors: Alessandro Spinuso and Andrej Mihajlovski\n",
     "\n",
     "####  Royal Netherlands Meteorological Institure (KNMI)\n",
     "\n",
