--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -44,7 +44,7 @@
     "  <li><i><b>Profile</b></i> the workfow for provenance tracking</li>\n",
     "  <li>Run the workflow with provenance activatied</li>\n",
     "  <li>Export and embed provenance within NetCDF results</li>\n",
-    "  <li>Explore the resulting provenance with interactive and static visualsations</li>\n",
+    "  <li>Explore the resulting provenance with static and interactive visualsations</li>\n",
     "</ol>\n",
     "\n",
     "### 3 - Data-reuse traceability. \n",
@@ -66,8 +66,6 @@
     "<ul>\n",
     "<li>The dispel4py framework is utilised for the workflows</li>\n",
     "<li>Xarray for inmemory management of netcdf/opendap data.</li>\n",
-    "<li>Matplotlib for visualisation.</li>\n",
-    "<li>A W3C PROV specialisation (S-PROV) used as provenance data model.</li>\n",
     "</ul>"
    ]
   },
@@ -443,23 +441,12 @@
     "\n",
     "<li><b><i>profile_prov_run</i></b> With this method, the users of the workflow can profile their run for provenance by indicating which types to apply to each component. Users can also chose where to store the metadata, locally to the file system or to a remote service. These operations can be performed in bulks, with different impacts on the overall overhead and on the experienced rapidity of the access of the lineage information. Finally, also general information about the attribution of the run, such as <i>username, run_id, description, workflow_name, workflow_id</i> are captured and included within the provenance traces.\n",
     "</li>\n",
-    "<li><b><i>Skip-Rules (Advanced)</i></b>\n",
-    "Users can tune the scale of the records produced by indicating in the above method a set of <i>skip-rules</i> for every component.This functionality allows users to specify rules to control the data-driven production of the provenance declaratively. The approach takes advantage of the contextualisation applied by the provenance types, which extract domain and experimental metadata, and evaluates their value against simple <i>skip-rule</i> of this kind:\n",
+    "<li><b><i>Selective-Rules (Advanced)</i></b>\n",
+    "Users can tune the scale of the records produced by indicating in the above method a set of <i>skip-rules</i> for every component.This functionality allows users to specify rules to control the data-driven production of the provenance declaratively. The approach takes advantage of the contextualisation applied by the provenance types, which extract domain and experimental metadata, and evaluates their value against simple <i>selective_rules</i>\n",
     "</li>\n",
     "</ul>\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "skip_rules={\"ANALYSIS\":{\"mycustom_term\":{\"$gt\":0,\"$lt\":10}}}"
    ]
   },
   {
@@ -486,8 +473,8 @@
     "                    'workflowId'  : \"workflow process\",\n",
     "                    'save_mode'   : 'service'         ,\n",
     "                    # Defines the use of the ProvenancePE with the Workflow Component\n",
-    "                    'componentsType' : {'ANALYSIS':(netcdfProvType,) , 'Collector':(netcdfProvType,)},\n",
-    "                    'skip_rules': skip_rules\n",
+    "                    'componentsType' : {'ANALYSIS':(netcdfProvType,) , 'Collector':(netcdfProvType,)}\n",
+    "                    \n",
     "                } \n"
    ]
   },
@@ -604,8 +591,8 @@
     "                     workflowName=prov_profile['workflowName'],\n",
     "                     workflowId=prov_profile['workflowId'],\n",
     "                     save_mode=prov_profile['save_mode'],\n",
-    "                     componentsType=prov_profile['componentsType'],\n",
-    "                     skip_rules=prov_profile['skip_rules']\n",
+    "                     componentsType=prov_profile['componentsType']\n",
+    "                     \n",
     "                    )\n",
     "                   \n",
     "\n",
