--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -12,7 +12,7 @@
     "####  Royal Netherlands Meteorological Institure (KNMI)\n",
     "\n",
     "\n",
-    "The following \"Live\" notebook demonstrates a simple workflow implemented with a data-intensive processing library (dispel4py), that has been extended with a configurable and programmable provenance tracking framework , S-PROV.\n",
+    "The following \"Live\" notebook demonstrates a simple workflow implemented with a data-intensive processing library (dispel4py), that has been extended with a configurable and programmable provenance tracking and visualisation framework.\n",
     "\n",
     "## Management Highligts, S-PROV Towards reproduciblity as a service\n",
     "<ul>\n",
@@ -55,7 +55,7 @@
     "\n",
     "### 4 - Informal Evaluation\n",
     "\n",
-    "SWOT form:\n",
+    "Feedback can be provided by filling in the following SWOT (Strengths,Weaknesses,Opportunities,Threats) form and sending a copy to spinuso(at)knmi.nl:\n",
     "\n",
     "https://docs.google.com/presentation/d/10xlRYytR7NB9iC19T29BD-rW77ZAtnjtlukMJDP_MIs/edit?usp=sharing\n",
     "\n",
@@ -64,14 +64,14 @@
     "\n",
     "\n",
     "<ul>\n",
-    "<li>The dispel4py framework is utilised for the workflows</li>\n",
+    "<li>The dispel4py framework is utilised for the workflow specification and execution</li>\n",
     "<li>Xarray for inmemory management of netcdf/opendap data.</li>\n",
     "</ul>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -484,7 +484,7 @@
    "source": [
     "#### Repository Endpoints \n",
     "\n",
-    "The REPOS_URL is the target provenence repository, based on (S-ProfFlow) https://github.com/KNMI/s-provenance. "
+    "The REPOS_URL is the target provenence repository, based on (S-ProvFlow) https://github.com/KNMI/s-provenance. "
    ]
   },
   {
