--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Provenance integration in netcdf/xarray Data-Intensive workflows.\n",
+    "#  Provenance integration in NetCDF/xarray Data-Intensive workflows.\n",
     "\n",
     "\n",
     "#### Authors: Alessandro Spinuso and Andrej Mihajlovski\n",
