--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -12,13 +12,13 @@
     "####  Royal Netherlands Meteorological Institure (KNMI)\n",
     "\n",
     "\n",
-    "The following \"Live\" notebook demonstrates a simple workflow implemented with a data-intensive processing library (dispel4py, ), that has been extended with a configurable and programmable provenance tracking and visualisation framework.\n",
+    "The following \"Live\" notebook demonstrates a simple workflow implemented with a data-intensive processing library (dispel4py, https://github.com/dispel4py/dispel4py). The library is extended in this tutorial by a configurable and programmable provenance tracking and visualisation framework.\n",
     "\n",
     "## Tutorial Highligts\n",
     "<ul>\n",
     "<li>\n",
     "The provenance information is tuned and adapted to the research requirements through Provenance types and Profiling</li>\n",
-    "<li>The provenance is stored as files or sent at run-time to an external repository (S-ProvFlow)</li>\n",
+    "<li>The provenance is stored as files or sent at run-time to an external repository (S-ProvFlow, https://github.com/KNMI/s-provenance)</li>\n",
     "<li>The provenance repository can be searched and explored via interactive tools</li> \n",
     "<li>If required, the lineage can be exported from the repository in W3C PROV format. This facilitates the production of interoperabile reports, curation and storage of the provenance within strucutred file formats (NetCDF)</li>\n",
     "</ul>\n",
@@ -46,7 +46,7 @@
     "\n",
     "### 3 - Data-reuse traceability. \n",
     "<ol>\n",
-    "  <li>Change the input (In[4]) and demostrate consistency of provenance for data-ruse across multiple workflow executions</li>\n",
+    "  <li>Change the input (In[4]) and test the consistency of provenance for data-ruse across multiple workflow executions</li>\n",
     "  <li>Discuss more complex use cases and configuration options</li>\n",
     "</ol>\n",
     "\n",
@@ -62,7 +62,7 @@
     "\n",
     "<ul>\n",
     "<li>The dispel4py framework is utilised for the workflow specification and execution</li>\n",
-    "<li>Xarray for inmemory management of netcdf/opendap data.</li>\n",
+    "<li>Xarray for in-memory management of netcdf data.</li>\n",
     "</ul>"
    ]
   },
