--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -447,7 +447,7 @@
    "source": [
     "#### Defining provenance profile\n",
     "\n",
-    "A high JSON 'template' describing the provenance profile for a specific run."
+    "A JSON 'template' describing the provenance profile for a specific run."
    ]
   },
   {
@@ -587,6 +587,8 @@
     "                     \n",
     "                    )\n",
     "                   \n",
+    "    \n",
+    "    \n",
     "    \n",
     "    return graph\n",
     "\n",
