--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -23,7 +23,7 @@
     "<li>If required, the lineage can be exported from the repository in W3C PROV format. This facilitates the production of interoperabile reports, curation and storage of the provenance within strucutred file formats (NetCDF)</li>\n",
     "</ul>\n",
     "\n",
-    "## Demonstration outline\n",
+    "## Tutorial Outline\n",
     "\n",
     "### 1 - Workflow specification and execution\n",
     "\n",
