--- a/ProvenanceDemo.ipynb
+++ b/ProvenanceDemo.ipynb
@@ -175,7 +175,9 @@
     "        #Additional metadata can be added to the output for provenance contextualisation\n",
     "        self.write('output', (nc , inputs['input'][1] ), metadata={'mycustom_term':10})\n",
     "\n",
+    "\n",
     "        \n",
+    "#Collect multiple inputs before producing a result\n",
     "class AnalysisAccumul(GenericPE): \n",
     "        \n",
     "    def __init__(self):\n",
@@ -296,7 +298,7 @@
     "                \n",
     "                #'Collector': [ { 'input' : [ 'http://opendap.knmi.nl/knmi/thredds/dodsC/CLIPC/cmcc/SWE/SWE_ophidia-0-10-1_CMCC_GlobSnow-SWE-L3B_monClim_19791001-20080701_1979-2008.nc',\n",
     "                #               'data/newA.nc']}]\n",
-    "    \n",
+    "                #Ingest a stream of inputs\n",
     "                'Collector': [ { 'input': [ 'data/newA.nc', 'data/newB.nc']},{ 'input': [ 'data/newA.nc', 'data/newB.nc']},{ 'input': [ 'data/newA.nc', 'data/newB.nc']},{ 'input': [ 'data/newA.nc', 'data/newB.nc']} ]     \n",
     "                #'Collector': [ { 'input': [ 'data/newB.nc', 'data/newC.nc']}]\n",
     "            }\n",
